Add Expanse dices (#390)
Add Expanse dices
---------

Co-authored-by: twonirwana <jvs@mailbox.org>